--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "2.2.6",
     "google-map-react": "^1.1.4",
     "moment": "2.24.0",
+    "node" : "10.15.3",
     "node-sass": "4.11.0",
     "nouislider": "13.1.1",
     "perfect-scrollbar": "1.4.0",
