--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "minify-sass": "node-sass src/assets/scss/blk-design-system-react.scss src/assets/css/blk-design-system-react.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/blk-design-system-react.scss src/assets/css/blk-design-system-react.css --source-map true"
   },
+    "engines": {
+    "node": "10.15.3"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
