--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "2.2.6",
     "google-map-react": "^1.1.4",
     "moment": "2.24.0",
+    "node": "^12.4.0",
     "nouislider": "13.1.1",
     "perfect-scrollbar": "1.4.0",
     "pure-react-carousel": "^1.20.0",
@@ -58,10 +59,7 @@
     "three.texttexture": "^20.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-  },
-  "engines": {
-    "node": "10.15.3"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
