--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.8.3",
     "react-multi-carousel": "^1.4.1",
+    "react-particles-js": "^2.6.0",
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "4.3.1",
     "react-scripts": "^2.1.8",
